# sentinel

./: .gitignore  pyproject.toml
docs/: system_sketch.md
src/sentinel/evals/: scorers.py
src/sentinel/ml/: schemas.py
src/sentinel/tests/: test_schemas.py  test_scorers.py
tests/: test_schemas.py  test_sentinel_import.py
