[project]
name = "sentinel-ai-infra"
version = "0.1.0"
description = "AI infrastructure for tool-use evals, trajectory logging, rewards, and post-training artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"